bienvenida agregada a mi pagina c6

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>SOBRE NOSOTROS</h1>
+    <h2>BIENVENIDO A MI PÁGINA</h2>
+    <h3>Soy <span>Ricardo</span></h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est nemo provident quis tenetur, aperiam, doloremque asperiores cupiditate ut tempora autem, nostrum ex? Molestiae tenetur nisi laudantium facere libero officia magnam.</p>
 </body>
 </html>
