--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>My página web</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">INICIO</a></li>
+                <li><a href="#">SOBRE MI</a></li>
+                <li><a href="#">CONTACTO</a></li>
+            </ul>
+        </nav>
+    </header>
     <h1>SOBRE NOSOTROS</h1>
 </body>
 </html>
