presentacion en ingles c9

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <h1>SOBRE NOSOTROS</h1>
     <h2>BIENVENIDO A MI PÁGINA</h2>
     <h3>Soy <span>Ricardo</span></h3>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est nemo provident quis tenetur, aperiam, doloremque asperiores cupiditate ut tempora autem, nostrum ex? Molestiae tenetur nisi laudantium facere libero officia magnam.</p>
+    <p>Lorem Hello, I am Ricardo, I live in Mexico and my age is 38 years old. 
+        I work as a social media administrator. I like graphic design but 
+        I like learning to program more and that's why I'm studying at Azúl School.</p>
 </body>
 </html>
