--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
             </ul>
         </nav>
     </header>
+    <main>
     <h1>SOBRE NOSOTROS</h1>
     <h2>BIENVENIDO A MI PÁGINA</h2>
     <h3>Soy <span>Ricardo</span></h3>
     <p>Lorem Hello, I am Ricardo, I live in Mexico and my age is 38 years old. 
         I work as a social media administrator. I like graphic design but 
         I like learning to program more and that's why I'm studying at Azúl School.</p>
+
+     </main>   
 </body>
+<footer><a href="https://www.facebook.com/profile.php?id=100072108631281">Faceboock</a></footer>
 </html>
