--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
     <h2>BIENVENIDO A MI PÁGINA</h2>
     <h3>Soy <span>Ricardo</span></h3>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est nemo provident quis tenetur, aperiam, doloremque asperiores cupiditate ut tempora autem, nostrum ex? Molestiae tenetur nisi laudantium facere libero officia magnam.</p>
+
+<h3>Comida</h3>
+<h4>Comida mexicana</h4>
+<img src="https://cdn.pixabay.com/photo/2022/12/26/19/57/champagne-7679665_960_720.jpg" alt="Brindis">
 </body>
 </html>
